--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
 ### Project-Specific Paths
+!/Pyrado/data/perma/experiments
+/Pyrado/data/temp/*
+/Pyrado/pyrado/environments/mujoco/assets/meshes/barrett_wam/*.stl
+/RcsPySim/build/
+/RcsPySim/config/iiwa_description/meshes/iiwa14/*/*.stl
+/RcsPySim/config/schunk_description/meshes/sdh/*.stl
+
+### Third Party Libraries and Modules
 /thirdParty/*
 !/thirdParty/pybind11
 !/thirdParty/eigen3
 !/thirdParty/catch2
 !/thirdParty/mujoco-py
-#/thirdParty/isaac_gym
-!/Pyrado/data/perma/experiments
-/Pyrado/data/temp/
-/Pyrado/pyrado/environments/mujoco/assets/meshes/barrett_wam/*.stl
-!/Pyrado/doc/source/_static
-/RcsPySim/build/
-/RcsPySim/config/iiwa_description/meshes/iiwa14/*/*.stl
-/RcsPySim/config/schunk_description/meshes/sdh/*.stl
 
 ### Python
 # Byte-compiled / optimized / DLL files
@@ -22,7 +22,7 @@ __pycache__/
 # C extensions
 *.so
 
-# Distribution / packaging
+# Distribution & packaging
 .Python
 build/
 develop-eggs/
@@ -76,6 +76,7 @@ Pyrado/docs/_build/
 
 # Ignore auto generated docs, but not index
 Pyrado/doc/source/*.rst
+!Pyrado/doc/source/_static
 !Pyrado/doc/source/index.rst
 
 ### Docker
