--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -16,3 +16,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag simurlacra
+    - name: Execute tests
+      run: docker run --rm -it simurlacra conda run -n pyrado bash -c "pytest Pyrado/tests/ --ver
+bose -m 'not visualisation and not longtime'"
