--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag simurlacra
       - name: Execute tests
-        run: docker run --rm -it simurlacra conda run -n pyrado bash -c "pytest Pyrado/tests/ --verbose -m 'not visualisation and not longtime'"
+        run: docker run --rm -i simurlacra conda run -n pyrado bash -c "pytest Pyrado/tests/ --verbose -m 'not visualisation and not longtime'"
