--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -17,4 +17,6 @@ jobs:
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag simurlacra
       - name: Execute tests
-        run: docker run --rm -i simurlacra conda run -n pyrado bash -c "pytest Pyrado/tests/ --verbose -m 'not visualisation and not longtime'"
+        run: |
+          mkdir cov
+          docker run --rm -i --mount type=bind,source="$(pwd)"/cov,target=/home/user/cov \ simurlacra conda run -n pyrado bash -c "pytest Pyrado/tests/ --cov=/home/user/cov --cov-report=xml --verbose -m 'not visualisation and not longtime'"
