--- a/Pyrado/environment.yml
+++ b/Pyrado/environment.yml
@@ -151,6 +151,7 @@ dependencies:
     - pyrsistent==0.15.4
     - pytest==3.7.4
     - pytest-lazy-fixture==0.4.2
+    - pytest-cov
     - python-dateutil==2.7.3
     - python-editor==1.0.4
     - pyzmq==18.1.0
