--- a/Pyrado/environment.yml
+++ b/Pyrado/environment.yml
@@ -53,7 +53,7 @@ dependencies:
   - pyopenssl=19.0.0=py36_0
   - pyparsing=2.4.5=py_0
   - pysocks=1.7.1=py36_0
-  - python=3.6.5=hc3d631a_2
+  - python=3.6.6
   - pytz=2019.3=py_0
   - pyyaml=5.1.1=py36h7b6447c_0
   - readline=7.0=ha6073c6_4
@@ -117,10 +117,6 @@ dependencies:
     - jedi==0.15.1
     - joblib==0.12.0
     - jsonschema==3.0.2
-    - jupyter==1.0.0
-    - jupyter-client==5.3.1
-    - jupyter-console==6.0.0
-    - jupyter-core==4.5.0
     - kiwisolver==1.0.1
     - mako==1.1.0
     - matplotlib==3.1.2
@@ -170,7 +166,6 @@ dependencies:
     - traitlets==4.3.2
     - txaio==18.8.1
     - typing==3.7.4.1
-    - vpnotebook==0.1.3
     - vpython==7.4.7
     - wcwidth==0.1.7
     - webencodings==0.5.1
