--- a/Pyrado/environment.yml
+++ b/Pyrado/environment.yml
@@ -19,6 +19,7 @@ dependencies:
   - docutils=0.15.2=py36_0
   - expat=2.2.5=he0dffb1_0
   - freetype=2.8=hab7d2ae_1
+  - fontconfig
   - idna=2.8=py36_0
   - imagesize=1.1.0=py_0
   - intel-openmp=2018.0.3=0
@@ -32,7 +33,7 @@ dependencies:
   - libgfortran-ng=7.2.0=hdf63c60_3
   - libpng=1.6.34=hb9fc6fc_0
   - libssh2=1.8.0=h9cfc8f7_4
-  - libstdcxx-ng=7.2.0=hdf63c60_3
+  - libstdcxx-ng=9.2.0
   - libtiff=4.0.9=he85c1e1_1
   - markupsafe=1.1.0=py36h470a237_0
   - mkl=2018.0.3=1
