--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -20,3 +20,9 @@ jobs:
         run: |
           mkdir cov
           docker run --rm -i -v $(pwd):/cov simurlacra conda run -n pyrado bash -c "pytest Pyrado/tests/ --cov=/cov --cov-report=xml --verbose -m 'not visualization and not longtime'"
+      - uses: codecov/codecov-action@v1
+        with:
+          file: ./cov/coverage.xml # optional
+          flags: unittests # optional
+          name: codecov-umbrella # optional
+          fail_ci_if_error: true # optional (default = false)
