--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -22,7 +22,7 @@ jobs:
           docker run --rm -i -v $(pwd):/cov simurlacra conda run -n pyrado bash -c "pytest Pyrado/tests/ --cov=/cov --cov-report=xml --verbose -m 'not visualization and not longtime'"
       - uses: codecov/codecov-action@v1
         with:
-          file: ./cov/coverage.xml # optional
+          file: coverage.xml # optional
           flags: unittests # optional
           name: codecov-umbrella # optional
           fail_ci_if_error: true # optional (default = false)
