--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Execute tests
         run: |
           mkdir cov
-          docker run --rm -i -v (pwd):/cov simurlacra conda run -n pyrado bash -c "pytest Pyrado/tests/test_utils.py --cov=./Pyrado --cov-report=xml --verbose -m 'not visualization and not longtime' && mv coverage.xml /cov"
+          docker run --rm -i -v (pwd):/cov simurlacra conda run -n pyrado bash -c "pytest Pyrado/tests --cov=./Pyrado --cov-report=xml --verbose -m 'not visualization and not longtime' && mv coverage.xml /cov"
       - uses: codecov/codecov-action@v1
         with:
           file: coverage.xml # optional
