--- a/Pyrado/environment.yml
+++ b/Pyrado/environment.yml
@@ -1,175 +1,96 @@
 name: pyrado
 channels:
-  - anaconda
-  - conda-forge
   - defaults
 dependencies:
-  - alabaster=0.7.12=py_0
-  - asn1crypto=1.2.0=py36_0
-  - astroid=2.3.3=py36_0
-  - babel=2.7.0=py_0
+  - _libgcc_mutex=0.1=main
+  - attrs=19.3.0=py_0
   - blas=1.0=mkl
-  - bzip2=1.0.6=h14c3975_5
   - ca-certificates=2020.1.1=0
-  - certifi=2020.4.5.1=py36_0
-  - cffi=1.11.5=py36h9745a5d_0
-  - chardet=3.0.4=py36_1003
-  - cmake=3.12.0=h307fef2_0
-  - cryptography-vectors=2.3.1=py36_0
-  - docutils=0.15.2=py36_0
-  - expat=2.2.5=he0dffb1_0
-  - freetype=2.8=hab7d2ae_1
-  - fontconfig
-  - idna=2.8=py36_0
-  - imagesize=1.1.0=py_0
-  - intel-openmp=2018.0.3=0
-  - jinja2=2.10.3=py_0
+  - certifi=2020.4.5.1=py38_0
+  - colorama=0.4.3=py_0
+  - coverage=5.0=py38h7b6447c_0
+  - cudatoolkit=10.2.89=hfd86e86_1
+  - cudnn=7.6.5=cuda10.2_0
+  - cycler=0.10.0=py38_0
+  - dbus=1.13.14=hb2f20db_0
+  - expat=2.2.6=he6710b0_0
+  - fontconfig=2.13.0=h9420a91_0
+  - freetype=2.9.1=h8a8886c_1
+  - glib=2.63.1=h3eb4bd4_1
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.0=hb31296c_0
+  - icu=58.2=he6710b0_3
+  - intel-openmp=2020.1=217
+  - joblib=0.15.1=py_0
   - jpeg=9b=h024ee3a_2
-  - lazy-object-proxy=1.3.1=py36h470a237_0
-  - libcurl=7.61.0=h1ad7b7a_0
-  - libedit=3.1.20170329=h6b74fdf_2
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=7.2.0=hdf63c60_3
-  - libgfortran-ng=7.2.0=hdf63c60_3
-  - libpng=1.6.34=hb9fc6fc_0
-  - libssh2=1.8.0=h9cfc8f7_4
-  - libstdcxx-ng=9.2.0
-  - libtiff=4.0.9=he85c1e1_1
-  - markupsafe=1.1.0=py36h470a237_0
-  - mkl=2018.0.3=1
-  - mkl_fft=1.0.1=py36h3010b51_0
-  - mkl_random=1.0.1=py36h629b387_0
-  - ncurses=6.1=hf484d3e_0
-  - ninja=1.8.2=py36h6bb024c_1
-  - numpy=1.14.5=py36hcd700cb_3
-  - numpy-base=1.14.5=py36hdbf6ddf_3
-  - olefile=0.45.1=py36_0
-  - openssl=1.0.2p=h14c3975_0
-  - packaging=19.2=py_0
-  - patchelf=0.9=hf484d3e_2
-  - pillow=5.1.0=py36h3deb7b8_0
-  - pip=19.3.1=py36_0
-  - pycparser=2.18=py36hf9f622e_1
-  - pygments=2.4.2=py_0
-  - pyopenssl=19.0.0=py36_0
-  - pyparsing=2.4.5=py_0
-  - pysocks=1.7.1=py36_0
-  - python=3.6.6
-  - pytz=2019.3=py_0
-  - pyyaml=5.1.1=py36h7b6447c_0
-  - readline=7.0=ha6073c6_4
-  - requests=2.22.0=py36_0
-  - rhash=1.3.6=hb7f436b_0
-  - scipy=1.1.0=py36hc49cb51_0
-  - setuptools=39.2.0=py36_0
-  - six=1.13.0=py36_0
-  - snowballstemmer=2.0.0=py_0
-  - sphinx=2.2.1=py_0
-  - sphinx-autoapi=1.2.1=py_0
-  - sphinx-math-dollar=1.1.1=py_0
-  - sphinxcontrib-applehelp=1.0.1=py_0
-  - sphinxcontrib-devhelp=1.0.1=py_0
-  - sphinxcontrib-dotnetdomain=0.4=py_0
-  - sphinxcontrib-golangdomain=0.2.0.dev0=py_0
-  - sphinxcontrib-htmlhelp=1.0.2=py_0
-  - sphinxcontrib-jsmath=1.0.1=py_0
-  - sphinxcontrib-qthelp=1.0.2=py_0
-  - sphinxcontrib-serializinghtml=1.1.3=py_0
-  - sqlite=3.24.0=h84994c4_0
-  - tk=8.6.7=hc745277_3
-  - typed-ast=1.1.1=py36h470a237_0
-  - unidecode=1.1.1=py_0
-  - urllib3=1.24.2=py36_0
-  - wheel=0.31.1=py36_0
-  - wrapt=1.11.0=py36h470a237_0
-  - xz=5.2.4=h14c3975_4
+  - kiwisolver=1.2.0=py38hfd86e86_0
+  - ld_impl_linux-64=2.33.1=h53a641e_7
+  - libedit=3.1.20181209=hc058e9b_0
+  - libffi=3.3=he6710b0_1
+  - libgcc-ng=9.1.0=hdf63c60_0
+  - libgfortran-ng=7.3.0=hdf63c60_0
+  - libpng=1.6.37=hbc83047_0
+  - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libtiff=4.1.0=h2733197_0
+  - libuuid=1.0.3=h1bed415_2
+  - libxcb=1.13=h1bed415_1
+  - libxml2=2.9.9=hea5a465_1
+  - matplotlib=3.1.3=py38_0
+  - matplotlib-base=3.1.3=py38hef1b27d_0
+  - mkl=2020.1=217
+  - mkl-service=2.3.0=py38he904b0f_0
+  - mkl_fft=1.0.15=py38ha843d7b_0
+  - mkl_random=1.1.1=py38h0573a6f_0
+  - more-itertools=8.3.0=py_0
+  - ncurses=6.2=he6710b0_1
+  - ninja=1.9.0=py38hfd86e86_0
+  - numpy=1.18.1=py38h4f9e942_0
+  - numpy-base=1.18.1=py38hde5b4d6_1
+  - olefile=0.46=py_0
+  - openssl=1.1.1g=h7b6447c_0
+  - packaging=20.3=py_0
+  - pandas=1.0.3=py38h0573a6f_0
+  - pcre=8.43=he6710b0_0
+  - pillow=7.1.2=py38hb39fc2d_0
+  - pip=20.0.2=py38_3
+  - pluggy=0.13.1=py38_0
+  - py=1.8.1=py_0
+  - pyparsing=2.4.7=py_0
+  - pyqt=5.9.2=py38h05f1152_4
+  - pytest=5.4.2=py38_0
+  - pytest-cov=2.8.1=py_0
+  - python=3.8.3=hcff3b4d_0
+  - python-dateutil=2.8.1=py_0
+  - pytz=2020.1=py_0
+  - pyyaml=5.3.1=py38h7b6447c_0
+  - qt=5.9.7=h5867ecd_1
+  - readline=8.0=h7b6447c_0
+  - scipy=1.4.1=py38h0b6359f_0
+  - setuptools=46.4.0=py38_0
+  - sip=4.19.13=py38he6710b0_0
+  - six=1.14.0=py38_0
+  - sqlite=3.31.1=h62c20be_1
+  - tabulate=0.8.3=py38_0
+  - tk=8.6.8=hbc83047_0
+  - tornado=6.0.4=py38h7b6447c_1
+  - tqdm=4.46.0=py_0
+  - wcwidth=0.1.9=py_0
+  - wheel=0.34.2=py38_0
+  - xz=5.2.5=h7b6447c_0
   - yaml=0.1.7=had09818_2
-  - zlib=1.2.11=ha838bed_2
+  - zlib=1.2.11=h7b6447c_3
+  - zstd=1.3.7=h0b5b093_0
   - pip:
-    - alembic==1.2.0
-    - atomicwrites==1.3.0
-    - attrs==19.1.0
-    - autobahn==19.8.1
-    - backcall==0.1.0
-    - bleach==3.1.0
-    - cliff==2.16.0
-    - cloudpickle==1.2.2
-    - cmd2==0.8.9
-    - colorama==0.3.9
-    - colorlog==4.0.2
-    - contextlib2==0.5.5
-    - cryptography==2.9.2
-    - cycler==0.10.0
-    - cython==0.28.3
-    - decorator==4.4.0
-    - defusedxml==0.6.0
-    - entrypoints==0.3
+    - cffi==1.14.0
+    - cython==3.0a5
     - fasteners==0.15
-    - future==0.18.2
-    - glfw==1.11.0
-    - gym==0.15.4
+    - glfw==1.11.1
     - imageio==2.8.0
-    - importlib-metadata==0.19
-    - git+https://github.com/Xfel/init-args-serializer.git@master
-    - ipykernel==4.10.1
-    - ipython==7.7.0
-    - ipython-genutils==0.2.0
-    - ipywidgets==7.5.1
-    - jedi==0.15.1
-    - joblib==0.12.0
-    - jsonschema==3.0.2
-    - kiwisolver==1.0.1
-    - mako==1.1.0
-    - matplotlib==3.1.2
-    - mistune==0.8.4
+    - init-args-serializer==1.0
     - monotonic==1.5
-    - more-itertools==7.2.0
-    - nbconvert==5.6.0
-    - nbformat==4.4.0
-    - notebook==6.0.1
-    - opencv-python==4.1.2.30
-    - opt-einsum==2.3.2
-    - optuna==0.16.0
-    - pallets-sphinx-themes==1.2.2
-    - pandas==0.25.3
-    - pandocfilters==1.4.2
-    - parso==0.5.1
-    - pbr==5.4.3
-    - pexpect==4.7.0
-    - pickleshare==0.7.5
-    - pluggy==0.12.0
-    - prettytable==0.7.2
-    - prometheus-client==0.7.1
-    - prompt-toolkit==2.0.9
-    - ptyprocess==0.6.0
-    - py==1.8.0
-    - pyglet==1.3.2
-    - pyperclip==1.7.0
-    - pyrsistent==0.15.4
-    - pytest==3.7.4
-    - pytest-lazy-fixture==0.4.2
-    - pytest-cov
-    - python-dateutil==2.7.3
-    - python-editor==1.0.4
-    - pyzmq==18.1.0
-    - qtconsole==4.5.4
-    - seaborn==0.10.0
-    - send2trash==1.5.0
-    - sphinx-removed-in==0.2.1
-    - sphinx-rtd-theme==0.4.3
-    - sqlalchemy==1.3.8
-    - stevedore==1.31.0
-    - tabulate==0.8.2
-    - terminado==0.8.2
-    - testpath==0.4.2
-    - tornado==6.0.3
-    - tqdm==4.31.0
-    - traitlets==4.3.2
-    - txaio==18.8.1
-    - typing==3.7.4.1
-    - vpython==7.4.7
-    - wcwidth==0.1.7
-    - webencodings==0.5.1
-    - widgetsnbextension==3.5.1
-    - zipp==0.5.2
+    - mujoco-py==2.0.2.9
+    - pycparser==2.20
+    - pyro-ppl==1.3.1
+    - pytest-lazy-fixture==0.6.3
+prefix: /home/robin/anaconda3/envs/pyrado38
 
