--- a/Pyrado/environment.yml
+++ b/Pyrado/environment.yml
@@ -5,8 +5,8 @@ dependencies:
   - _libgcc_mutex=0.1=main
   - attrs=19.3.0=py_0
   - blas=1.0=mkl
-  - ca-certificates=2020.1.1=0
-  - certifi=2020.4.5.1=py38_0
+  - ca-certificates=2020.4.5.1=hecc5488_0
+  - certifi=2020.4.5.1=py38h32f6830_0
   - colorama=0.4.3=py_0
   - coverage=5.0=py38h7b6447c_0
   - cudatoolkit=10.2.89=hfd86e86_1
@@ -59,8 +59,11 @@ dependencies:
   - pyqt=5.9.2=py38h05f1152_4
   - pytest=5.4.2=py38_0
   - pytest-cov=2.8.1=py_0
+  - pytest-forked=1.1.2=py_0
+  - pytest-xdist=1.32.0=pyh9f0ad1d_0
   - python=3.8.3=hcff3b4d_0
   - python-dateutil=2.8.1=py_0
+  - python_abi=3.8=1_cp38
   - pytz=2020.1=py_0
   - pyyaml=5.3.1=py38h7b6447c_0
   - qt=5.9.7=h5867ecd_1
@@ -81,6 +84,7 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
   - pip:
+    - box2d==2.3.10
     - cffi==1.14.0
     - cython==3.0a5
     - fasteners==0.15
