--- a/Pyrado/environment.yml
+++ b/Pyrado/environment.yml
@@ -1,6 +1,7 @@
 name: pyrado
 channels:
   - defaults
+  - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=main
   - attrs=19.3.0=py_0
@@ -55,6 +56,7 @@ dependencies:
   - pip=20.0.2=py38_3
   - pluggy=0.13.1=py38_0
   - py=1.8.1=py_0
+  - pycparser=2.20=py_0
   - pyparsing=2.4.7=py_0
   - pyqt=5.9.2=py38h05f1152_4
   - pytest=5.4.2=py38_0
@@ -77,6 +79,7 @@ dependencies:
   - tk=8.6.8=hbc83047_0
   - tornado=6.0.4=py38h7b6447c_1
   - tqdm=4.46.0=py_0
+  - vpython=7.6.1=py38h516909a_0
   - wcwidth=0.1.9=py_0
   - wheel=0.34.2=py38_0
   - xz=5.2.5=h7b6447c_0
@@ -93,6 +96,5 @@ dependencies:
     - git+https://github.com/Xfel/init-args-serializer.git@master
     - monotonic==1.5
     - mujoco-py==2.0.2.9
-    - pycparser==2.20
     - pyro-ppl==1.3.1
     - pytest-lazy-fixture==0.6.3
