--- a/Pyrado/environment.yml
+++ b/Pyrado/environment.yml
@@ -10,8 +10,6 @@ dependencies:
   - certifi=2020.4.5.1=py38h32f6830_0
   - colorama=0.4.3=py_0
   - coverage=5.0=py38h7b6447c_0
-  - cudatoolkit=10.2.89=hfd86e86_1
-  - cudnn=7.6.5=cuda10.2_0
   - cycler=0.10.0=py38_0
   - dbus=1.13.14=hb2f20db_0
   - expat=2.2.6=he6710b0_0
@@ -35,7 +33,7 @@ dependencies:
   - libtiff=4.1.0=h2733197_0
   - libuuid=1.0.3=h1bed415_2
   - libxcb=1.13=h1bed415_1
-  - libxml2=2.9.9=hea5a465_1
+#  - libxml2=2.9.9=hea5a465_1
   - matplotlib=3.1.3=py38_0
   - matplotlib-base=3.1.3=py38hef1b27d_0
   - mkl=2020.1=217
