--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -18,11 +18,10 @@ jobs:
         run: docker build . --file Dockerfile --tag simurlacra
       - name: Execute tests
         run: |
-          mkdir cov
           docker run --rm -i -v $(pwd):/cov simurlacra conda run -n pyrado bash -c "pytest Pyrado/tests --cov=./Pyrado --cov-report=xml --verbose -m 'not visualization and not longtime' && mv coverage.xml /cov"
       - uses: codecov/codecov-action@v1
         with:
-          file: ./coverage.xml # optional
+          file: coverage.xml # optional
           flags: unittests # optional
           name: codecov-umbrella # optional
           fail_ci_if_error: true # optional (default = false)
