--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -18,26 +18,9 @@ jobs:
         run: docker build . --file Dockerfile --tag simurlacra
       - name: Execute tests
         run: |
-          docker run --rm -i -v $(pwd):/cov simurlacra conda run -n pyrado bash -c "pytest Pyrado/tests --cov=Pyrado --cov-report=xml --verbose -m 'not visualization and not longtime' && cat coverage.xml && mv coverage.xml /cov"
-      - name: Set up Python 3.x
-        uses: actions/setup-python@v2
-        with:
-          # Semantic version range syntax or exact version of a Python version
-          python-version: '3.8'
-      - run: |
-          python -m pip install --upgrade pip
-          pip install pytest
-          pip install coverage
-          pip install pytest-cov
-          pip install coveralls==1.10.0
-      - name: Test with pytest
-        env:
-          COVERALLS_REPO_TOKEN: ${{ github.token }}
-        run: |
-          coveralls
+          docker run --rm -i -v $(pwd):/cov simurlacra conda run -n pyrado bash -c "pytest Pyrado/tests --cov=Pyrado --cov-report=xml --verbose -m 'not visualization and not longtime'; cat coverage.xml; mv coverage.xml /cov"
       - uses: codecov/codecov-action@v1
         with:
           file: coverage.xml # optional
           flags: unittests # optional
           name: codecov-umbrella # optional
-          fail_ci_if_error: true # optional (default = false)
