--- a/Pyrado/environment.yml
+++ b/Pyrado/environment.yml
@@ -1,152 +1,184 @@
 name: pyrado
 channels:
   - vpython
+  - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - aiohttp=3.6.1=py38h7b6447c_0
-  - apipkg=1.5=py38_0
-  - async-timeout=3.0.1=py38_0
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=1_llvm
+  - aiohttp=3.6.2=py37h516909a_0
+  - alabaster=0.7.12=py_0
+  - apipkg=1.5=py_0
+  - async-timeout=3.0.1=py_1000
   - attrs=19.3.0=py_0
   - autobahn=20.4.3=py_0
-  - backcall=0.1.0=py38_0
-  - blas=1.0=mkl
-  - bleach=3.1.4=py_0
-  - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2020.1.1=0
-  - certifi=2020.4.5.1=py38_0
-  - cffi=1.14.0=py38he30daa8_1
-  - chardet=3.0.4=py38_1003
-  - cmake=3.14.0=h52cb24c_0
+  - babel=2.8.0=py_0
+  - backcall=0.1.0=py_0
+  - bleach=3.1.5=pyh9f0ad1d_0
+  - brotlipy=0.7.0=py37h8f50634_1000
+  - bzip2=1.0.8=h516909a_2
+  - ca-certificates=2020.4.5.2=hecda079_0
+  - certifi=2020.4.5.2=py37hc8dfbb8_0
+  - cffi=1.14.0=py37hd463f26_0
+  - chardet=3.0.4=py37hc8dfbb8_1006
+  - cmake=3.17.0=h28c56e5_0
   - colorama=0.4.3=py_0
-  - coverage=5.0=py38h7b6447c_0
-  - cryptography=2.9.2=py38h1ba5d50_0
-  - cycler=0.10.0=py38_0
-  - cython=0.29.17=py38he6710b0_0
-  - dbus=1.13.14=hb2f20db_0
+  - coverage=5.1=py37h8f50634_0
+  - cryptography=2.9.2=py37hb09aad4_0
+  - cycler=0.10.0=py_2
+  - cython=0.29.19=py37h3340039_0
+  - dbus=1.13.6=he372182_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
-  - entrypoints=0.3=py38_0
+  - docutils=0.16=py37hc8dfbb8_1
+  - entrypoints=0.3=py37hc8dfbb8_1001
   - execnet=1.7.1=py_0
-  - expat=2.2.6=he6710b0_0
-  - fontconfig=2.13.0=h9420a91_0
-  - freetype=2.9.1=h8a8886c_1
-  - glib=2.63.1=h3eb4bd4_1
-  - gmp=6.1.2=h6c8ec71_1
-  - gst-plugins-base=1.14.0=hbbd80ab_1
-  - gstreamer=1.14.0=hb31296c_0
-  - icu=58.2=he6710b0_3
+  - expat=2.2.9=he1b5a44_2
+  - fontconfig=2.13.1=h86ecdb6_1001
+  - freetype=2.10.2=he06d7ca_0
+  - gettext=0.19.8.1=hc5be6a0_1002
+  - glib=2.64.3=h6f030ca_0
+  - gst-plugins-base=1.14.5=h0935bb2_2
+  - gstreamer=1.14.5=h36ae1b5_2
+  - icu=64.2=he1b5a44_1
   - idna=2.9=py_1
-  - importlib-metadata=1.6.0=py38_0
-  - importlib_metadata=1.6.0=0
-  - intel-openmp=2020.1=217
-  - ipykernel=5.1.4=py38h39e3cac_0
-  - ipython=7.13.0=py38h5ca1d4c_0
-  - ipython_genutils=0.2.0=py38_0
+  - imagesize=1.2.0=py_0
+  - importlib-metadata=1.6.1=py37hc8dfbb8_0
+  - importlib_metadata=1.6.1=0
+  - ipykernel=5.3.0=py37h43977f1_0
+  - ipython=7.15.0=py37hc8dfbb8_0
+  - ipython_genutils=0.2.0=py_1
   - ipywidgets=7.5.1=py_0
-  - jedi=0.17.0=py38_0
-  - jinja2=2.11.2=py_0
+  - jedi=0.17.0=py37hc8dfbb8_0
+  - jinja2=2.11.2=pyh9f0ad1d_0
   - joblib=0.15.1=py_0
-  - jpeg=9b=h024ee3a_2
-  - jsonschema=3.2.0=py38_0
-  - jupyter=1.0.0=py38_7
+  - jpeg=9d=h516909a_0
+  - jsonschema=3.2.0=py37hc8dfbb8_1
+  - jupyter=1.0.0=py_2
   - jupyter-server-proxy=1.1.0=py_0
   - jupyter_client=6.1.3=py_0
-  - jupyter_console=6.1.0=py_0
-  - jupyter_core=4.6.3=py38_0
-  - kiwisolver=1.2.0=py38hfd86e86_0
-  - krb5=1.17.1=h173b8e3_0
-  - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libcurl=7.69.1=h20c2e04_0
-  - libedit=3.1.20181209=hc058e9b_0
-  - libffi=3.3=he6710b0_1
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libpng=1.6.37=hbc83047_0
-  - libsodium=1.0.16=h1bed415_0
-  - libssh2=1.9.0=h1ba5d50_1
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libuuid=1.0.3=h1bed415_2
-  - libxcb=1.13=h1bed415_1
-  - libxml2=2.9.9=hea5a465_1
-  - markupsafe=1.1.1=py38h7b6447c_0
-  - matplotlib=3.1.3=py38_0
-  - matplotlib-base=3.1.3=py38hef1b27d_0
-  - mistune=0.8.4=py38h7b6447c_1000
-  - mkl=2020.1=217
-  - mkl-service=2.3.0=py38he904b0f_0
-  - mkl_fft=1.0.15=py38ha843d7b_0
-  - mkl_random=1.1.1=py38h0573a6f_0
-  - more-itertools=8.3.0=py_0
-  - multidict=4.7.3=py38h7b6447c_0
-  - nbconvert=5.6.1=py38_0
+  - jupyter_console=6.1.0=py_1
+  - jupyter_core=4.6.3=py37hc8dfbb8_1
+  - kiwisolver=1.2.0=py37h99015e2_0
+  - krb5=1.17.1=h2fd8d38_0
+  - ld_impl_linux-64=2.34=h53a641e_4
+  - libblas=3.8.0=16_openblas
+  - libcblas=3.8.0=16_openblas
+  - libclang=9.0.1=default_hde54327_0
+  - libcurl=7.69.1=hf7181ac_0
+  - libedit=3.1.20191231=h46ee950_0
+  - libffi=3.2.1=he1b5a44_1007
+  - libgcc-ng=9.2.0=h24d8f2e_2
+  - libgfortran-ng=7.5.0=hdf63c60_6
+  - libiconv=1.15=h516909a_1006
+  - liblapack=3.8.0=16_openblas
+  - libllvm9=9.0.1=he513fc3_1
+  - libopenblas=0.3.9=h5ec1e0e_0
+  - libpng=1.6.37=hed695b0_1
+  - libsodium=1.0.17=h516909a_0
+  - libssh2=1.9.0=hab1572f_2
+  - libstdcxx-ng=9.2.0=hdf63c60_2
+  - libuuid=2.32.1=h14c3975_1000
+  - libuv=1.38.0=h516909a_0
+  - libxcb=1.13=h14c3975_1002
+  - libxkbcommon=0.10.0=he1b5a44_0
+  - libxml2=2.9.10=hee79883_0
+  - llvm-openmp=10.0.0=hc9558a2_0
+  - markupsafe=1.1.1=py37h8f50634_1
+  - matplotlib=3.2.1=0
+  - matplotlib-base=3.2.1=py37h30547a4_0
+  - mistune=0.8.4=py37h8f50634_1001
+  - mkl=2020.1=219
+  - more-itertools=8.3.0=py_1
+  - multidict=4.7.5=py37h8f50634_1
+  - nbconvert=5.6.1=py37hc8dfbb8_1
   - nbformat=5.0.6=py_0
-  - ncurses=6.2=he6710b0_1
-  - notebook=6.0.3=py38_0
-  - numpy=1.18.1=py38h4f9e942_0
-  - numpy-base=1.18.1=py38hde5b4d6_1
-  - openssl=1.1.1g=h7b6447c_0
-  - packaging=20.3=py_0
-  - pandas=1.0.3=py38h0573a6f_0
-  - pandoc=2.2.3.2=0
-  - pandocfilters=1.4.2=py38_1
-  - parso=0.7.0=py_0
-  - pcre=8.43=he6710b0_0
-  - pexpect=4.8.0=py38_0
-  - pickleshare=0.7.5=py38_1000
-  - pip=20.0.2=py38_3
-  - pluggy=0.13.1=py38_0
-  - prometheus_client=0.7.1=py_0
+  - ncurses=6.1=hf484d3e_1002
+  - notebook=6.0.3=py37hc8dfbb8_0
+  - nspr=4.25=he1b5a44_0
+  - nss=3.47=he751ad9_0
+  - numpy=1.18.5=py37h8960a57_0
+  - openssl=1.1.1g=h516909a_0
+  - packaging=20.4=pyh9f0ad1d_0
+  - pandas=1.0.4=py37h0da4684_0
+  - pandoc=2.9.2.1=0
+  - pandocfilters=1.4.2=py_1
+  - parso=0.7.0=pyh9f0ad1d_0
+  - patchelf=0.10=he1b5a44_0
+  - patsy=0.5.1=py_0
+  - pcre=8.44=he1b5a44_0
+  - pexpect=4.8.0=py37hc8dfbb8_1
+  - pickleshare=0.7.5=py37hc8dfbb8_1001
+  - pip=20.1.1=py_1
+  - pluggy=0.13.1=py37hc8dfbb8_1
+  - prometheus_client=0.8.0=pyh9f0ad1d_0
   - prompt-toolkit=3.0.5=py_0
   - prompt_toolkit=3.0.5=0
-  - ptyprocess=0.6.0=py38_0
+  - pthread-stubs=0.4=h14c3975_1001
+  - ptyprocess=0.6.0=py_1001
   - py=1.8.1=py_0
   - pycparser=2.20=py_0
   - pygments=2.6.1=py_0
-  - pyparsing=2.4.7=py_0
-  - pyqt=5.9.2=py38h05f1152_4
-  - pyrsistent=0.16.0=py38h7b6447c_0
-  - pytest=5.4.2=py38_0
-  - pytest-forked=1.1.3=py_0
-  - pytest-xdist=1.32.0=py_0
-  - pytest-cov
-  - python=3.8.3=hcff3b4d_0
+  - pyopenssl=19.1.0=py_1
+  - pyparsing=2.4.7=pyh9f0ad1d_0
+  - pyqt=5.12.3=py37h8685d9f_3
+  - pyrsistent=0.16.0=py37h8f50634_0
+  - pysocks=1.7.1=py37hc8dfbb8_1
+  - pytest=5.4.3=py37hc8dfbb8_0
+  - pytest-forked=1.1.2=py_0
+  - pytest-xdist=1.32.0=pyh9f0ad1d_0
+  - python=3.7.6=cpython_h8356626_6
   - python-dateutil=2.8.1=py_0
-  - pytz=2020.1=py_0
-  - pyyaml=5.3.1=py38h7b6447c_0
-  - pyzmq=18.1.1=py38he6710b0_0
-  - qt=5.9.7=h5867ecd_1
-  - qtconsole=4.7.4=py_0
+  - python_abi=3.7=1_cp37m
+  - pytz=2020.1=pyh9f0ad1d_0
+  - pyyaml=5.3.1=py37h8f50634_0
+  - pyzmq=19.0.1=py37hac76be4_0
+  - qt=5.12.5=hd8c4c69_1
+  - qtconsole=4.7.4=pyh9f0ad1d_0
   - qtpy=1.9.0=py_0
-  - readline=8.0=h7b6447c_0
-  - rhash=1.3.8=h1ba5d50_0
-  - scipy=1.4.1=py38h0b6359f_0
+  - readline=8.0=hf8c457e_0
+  - requests=2.23.0=pyh8c360ce_2
+  - rhash=1.3.6=h14c3975_1001
+  - scipy=1.4.1=py37ha3d9a3c_3
   - seaborn=0.10.1=py_0
-  - send2trash=1.5.0=py38_0
-  - setuptools=47.1.1=py38_0
+  - send2trash=1.5.0=py_0
+  - setuptools=47.1.1=py37hc8dfbb8_0
   - simpervisor=0.3=py_1
-  - sip=4.19.13=py38he6710b0_0
-  - six=1.14.0=py38_0
-  - sqlite=3.31.1=h62c20be_1
-  - tabulate=0.8.3=py38_0
-  - terminado=0.8.3=py38_0
+  - six=1.15.0=pyh9f0ad1d_0
+  - snowballstemmer=2.0.0=py_0
+  - sphinx=3.0.4=py_0
+  - sphinx-math-dollar=1.1.1=py_0
+  - sphinx_rtd_theme=0.4.3=py_0
+  - sphinxcontrib-applehelp=1.0.2=py_0
+  - sphinxcontrib-devhelp=1.0.2=py_0
+  - sphinxcontrib-htmlhelp=1.0.3=py_0
+  - sphinxcontrib-jsmath=1.0.1=py_0
+  - sphinxcontrib-qthelp=1.0.3=py_0
+  - sphinxcontrib-serializinghtml=1.1.4=py_0
+  - sqlite=3.30.1=hcee41ef_0
+  - statsmodels=0.11.1=py37h8f50634_1
+  - tabulate=0.8.7=pyh9f0ad1d_0
+  - terminado=0.8.3=py37hc8dfbb8_1
   - testpath=0.4.4=py_0
-  - tk=8.6.8=hbc83047_0
-  - tornado=6.0.4=py38h7b6447c_1
-  - tqdm=4.46.0=py_0
-  - traitlets=4.3.3=py38_0
+  - tk=8.6.10=hed695b0_0
+  - tornado=6.0.4=py37h8f50634_1
+  - tqdm=4.46.1=pyh9f0ad1d_0
+  - traitlets=4.3.3=py37hc8dfbb8_1
   - txaio=20.3.1=py_0
-  - vpython=7.6.1=py38h516909a_0
-  - wcwidth=0.1.9=py_0
-  - webencodings=0.5.1=py38_1
-  - wheel=0.34.2=py38_0
-  - widgetsnbextension=3.5.1=py38_0
-  - xz=5.2.5=h7b6447c_0
-  - yaml=0.1.7=had09818_2
-  - yarl=1.4.2=py38h7b6447c_0
-  - zeromq=4.3.1=he6710b0_3
+  - urllib3=1.25.9=py_0
+  - vpython=7.6.1=py37h516909a_0
+  - wcwidth=0.2.4=pyh9f0ad1d_0
+  - webencodings=0.5.1=py_1
+  - wheel=0.34.2=py_1
+  - widgetsnbextension=3.5.1=py37_0
+  - xorg-libxau=1.0.9=h14c3975_0
+  - xorg-libxdmcp=1.1.3=h516909a_0
+  - xz=5.2.5=h516909a_0
+  - yaml=0.2.5=h516909a_0
+  - yarl=1.3.0=py37h516909a_1000
+  - zeromq=4.3.2=he1b5a44_2
   - zipp=3.1.0=py_0
-  - zlib=1.2.11=h7b6447c_3
+  - zlib=1.2.11=h516909a_1006
   - pip:
     - argparse==1.4.0
     - box2d==2.3.10
@@ -160,7 +192,9 @@ dependencies:
     - monotonic==1.5
     - pillow==7.1.2
     - pprint==0.1
+    - pybind11==2.5.dev1
     - pyglet==1.5.0
-    - pyro-ppl==1.3.1
+    - pyqt5-sip==4.19.18
+    - pyqtchart==5.12
+    - pyqtwebengine==5.12.1
     - pytest-lazy-fixture==0.6.3
-
