--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -24,4 +24,4 @@ jobs:
           chmod +x test-reporter-latest-linux-amd64
           ./test-reporter-latest-linux-amd64 before-build
           docker run --rm -i -v $(pwd):/cov simurlacra conda run -n pyrado bash -c "pytest Pyrado/tests --cov=./Pyrado --cov-report=xml --verbose -m 'not visualization and not longtime' || mv coverage.xml /cov"
-          ./test-reporter-latest-linux-amd64 after-build
+          ./test-reporter-latest-linux-amd64 after-build -t coverage.py
