--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -21,7 +21,10 @@ jobs:
           CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
         run: |
           wget https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64
+          export COVPATH=$(realpath .)
           chmod +x test-reporter-latest-linux-amd64
           ./test-reporter-latest-linux-amd64 before-build
-          docker run --rm -i -v $(pwd):/cov simurlacra conda run -n pyrado bash -c "pytest Pyrado/tests --cov=./Pyrado --cov-report=xml --verbose -m 'not visualization and not longtime'; cp coverage.xml /cov"
+          docker run --rm -i -v $COVPATH:/cov simurlacra conda run -n pyrado bash -c "pytest Pyrado/tests --cov=./Pyrado --cov-report=xml --verbose -m 'not visualization and not longtime'; cp coverage.xml /cov"
+          ls
+          pwd
           ./test-reporter-latest-linux-amd64 after-build -t coverage.py
