--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -25,7 +25,7 @@ jobs:
           chmod +x test-reporter-latest-linux-amd64
           ./test-reporter-latest-linux-amd64 before-build
           docker run --rm -i -v $COVPATH:/cov simurlacra conda run -n pyrado bash -c "pytest Pyrado/tests --cov=./Pyrado --cov-report=xml --verbose -m 'not visualization and not longtime'; sudo cp ./coverage.xml /cov"
-          ./test-reporter-latest-linux-amd64 after-build -t coverage.py
+          ./test-reporter-latest-linux-amd64 after-build -t coverage.py -p Pyrado
       - uses: codecov/codecov-action@v1
         with:
           file: coverage.xml # optional
