--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -33,3 +33,4 @@ jobs:
           file: coverage.xml # optional
           flags: unittests # optional
           name: codecov-umbrella # optional
+          fail_ci_if_error: true
